Petits ajustements textuels dans la documentation

--- a/public/index.html
+++ b/public/index.html
@@ -1749,7 +1749,7 @@
                     <tr>
                         <td>value</td>
                         <td>Texte</td>
-                        <td>Label si non spécifié</td>
+                        <td>Valeur de l'attribut label</td>
                         <td>Valeur envoyée lors de la soumission du formulaire</td>
                     </tr>
                     <tr>
@@ -1762,7 +1762,7 @@
                         <td>checked</td>
                         <td>"true" ou "false"</td>
                         <td>false</td>
-                        <td>Détermine si la case est cochée par défaut</td>
+                        <td>Coche la case par défaut lorsque true</td>
                     </tr>
                     </tbody>
                 </table>
