--- a/public/index.html
+++ b/public/index.html
@@ -1450,7 +1450,7 @@
                 </qc-radio-group>
             </qc-doc-exemple>
 
-            <qc-doc-exemple caption="Exemple de boutons radio dans un champ avec une option présélectionnée">
+            <qc-doc-exemple caption="Exemple de boutons radio dans un groupe avec une option présélectionnée">
                 <qc-radio-group legend="Choisissez une option : " name="ex-md-checked">
                     <qc-radio-button
                             label="Option 1"
@@ -1468,7 +1468,7 @@
                 </qc-radio-group>
             </qc-doc-exemple>
 
-            <qc-doc-exemple caption="Exemple de boutons radio dans un champ obligatoire">
+            <qc-doc-exemple caption="Exemple de boutons radio dans un groupe obligatoire">
                 <qc-radio-group legend="Choisissez une option : " name="ex-md-ob" required>
                     <qc-radio-button
                             label="Option 1"
@@ -1485,7 +1485,7 @@
                 </qc-radio-group>
             </qc-doc-exemple>
 
-            <qc-doc-exemple caption="Exemple de boutons radio dans un champ en état invalide">
+            <qc-doc-exemple caption="Exemple de boutons radio dans un groupe en état invalide">
                 <qc-radio-group legend="Choisissez une option : " name="ex-md-invalid" required invalid>
                     <qc-radio-button
                             label="Option 1"
@@ -1573,7 +1573,7 @@
                         <td>name</td>
                         <td>Texte</td>
                         <td></td>
-                        <td>Nom du champ de formulaire</td>
+                        <td>Nom du groupe de boutons radio</td>
                     </tr>
                     <tr>
                         <td>legend</td>
@@ -1591,14 +1591,14 @@
                         <td>required</td>
                         <td>"true" ou "false"</td>
                         <td>"false"</td>
-                        <td>Indique si le champ est requis</td>
+                        <td>Indique si le groupe est requis</td>
                     </tr>
                     <tr>
                         <td>invalid</td>
                         <td>"true" ou "false"</td>
                         <td>"false"</td>
                         <td>
-                            Indique si le champ est dans un état invalide
+                            Indique si le groupe est dans un état invalide
                             (ajuster cette valeur au lors de la validation d'un formulaire)
                         </td>
                     </tr>
@@ -1628,7 +1628,7 @@
                         <td>name</td>
                         <td>Texte</td>
                         <td></td>
-                        <td>Nom du champ de formulaire. Hérité du groupe parent si une valeur y est présente.</td>
+                        <td>Nom du groupe de boutons radio. Hérité du groupe parent si une valeur y est présente.</td>
                     </tr>
                     <tr>
                         <td>value</td>
