Ajout de documentation de radio-* pour qc-radio-button

--- a/public/index.html
+++ b/public/index.html
@@ -1664,6 +1664,16 @@
                         <td>"false"</td>
                         <td>Indique si un bouton radio ne peut pas être sélectionné</td>
                     </tr>
+                    <tr>
+                        <td>radio-*</td>
+                        <td></td>
+                        <td></td>
+                        <td>
+                            Tout attribut commençant par <code class="qc-bg-color-grey-pale">radio-</code> sera ajouté
+                            comme attribut au bouton radio brut. Utile pour ajouter de la validation de formulaire par
+                            contraintes HTML.
+                        </td>
+                    </tr>
                     </tbody>
                 </table>
             </div>
