Ajout de documentation de radio-* pour qc-radio-button

--- a/public/index.html
+++ b/public/index.html
@@ -1652,6 +1652,16 @@
                             comme attribut au bouton radio brut.
                         </td>
                     </tr>
+                    <tr>
+                        <td>radio-*</td>
+                        <td></td>
+                        <td></td>
+                        <td>
+                            Tout attribut commençant par <code class="qc-bg-color-grey-pale">radio-</code> sera ajouté
+                            comme attribut au bouton radio brut. Utile pour ajouter de la validation de formulaire par
+                            contraintes HTML.
+                        </td>
+                    </tr>
                     </tbody>
                 </table>
             </div>zzz
