Documentation de size dans index.html

--- a/public/index.html
+++ b/public/index.html
@@ -1712,7 +1712,7 @@
             </qc-doc-exemple>
 
             <h4>Groupe de cases à cocher</h4>
-            <qc-doc-exemple caption="Exemple de cases à cocher avec différents états">
+            <qc-doc-exemple caption="Exemple d'un groupe de cases à cocher avec différents états">
                 <qc-checkbox-group legend="Sélectionnez vos options">
                     <qc-checkbox label="Option 1"></qc-checkbox>
                     <qc-checkbox label="Option 2 cochée par défaut" checked="true"></qc-checkbox>
@@ -1771,6 +1771,12 @@
                         <td>false</td>
                         <td>Rend la case à cocher obligatoire lorsque true</td>
                     </tr>
+                    <tr>
+                        <td>size</td>
+                        <td>"md" ou "sm"</td>
+                        <td>"md"</td>
+                        <td>Taille des cases à cocher</td>
+                    </tr>
                     </tbody>
                 </table>
             </div>
@@ -1799,6 +1805,12 @@
                         <td>Texte</td>
                         <td>""</td>
                         <td>Légende du groupe de cases à cocher</td>
+                    </tr>
+                    <tr>
+                        <td>size</td>
+                        <td>"md" ou "sm"</td>
+                        <td>"md"</td>
+                        <td>Taille des cases à cocher</td>
                     </tr>
                     </tbody>
                 </table>
