Gestion des messages d'erreur et style fonctionnel pour les CheckboxGroup

--- a/public/index.html
+++ b/public/index.html
@@ -1775,6 +1775,20 @@
                 </qc-checkbox-group>
             </qc-doc-exemple>
 
+            <h4>Groupe de cases à cocher obligatoire</h4>
+            <qc-doc-exemple caption="Exemple d'un groupe de cases avec une option obligatoire">
+                <qc-checkbox-group
+                        legend="Sélectionnez vos options"
+                        name="options"
+                        required="true"
+                        invalid="true"
+                        error-text="Veuillez sélectionner au moins une option">
+                    <qc-checkbox label="Option 1"></qc-checkbox>
+                    <qc-checkbox label="Option 2"></qc-checkbox>
+                    <qc-checkbox label="Option 3"></qc-checkbox>
+                </qc-checkbox-group>
+            </qc-doc-exemple>
+
 
             <h3>Documentation technique</h3>
 
