Gestion des erreurs pour une case à cocher individuelle OK

--- a/public/index.html
+++ b/public/index.html
@@ -1760,10 +1760,14 @@
 
             <h4>Case à cocher seule</h4>
             <qc-doc-exemple caption="Exemple d'une case à cocher seule obligatoire">
-                <qc-checkbox
-                label="J'accepte les conditions d'utilisation"
-                required="true">
-                </qc-checkbox>
+                <form>
+                    <qc-checkbox
+                            label="J'accepte les conditions d'utilisation"
+                            required="true">
+                    </qc-checkbox>
+                    <button type="submit">Soumettre</button>
+                </form>
+
             </qc-doc-exemple>
 
             <h4>Groupe de cases à cocher</h4>
