--- a/public/index.html
+++ b/public/index.html
@@ -1499,13 +1499,20 @@
                 form.addEventListener("submit", (event) => validateRadioForm(event, form));
                 function validateRadioForm(event, formToValidate) {
                     event.preventDefault();
+
                     const groups = formToValidate.querySelectorAll("qc-radio-group");
+                    let validForm = true;
                     groups.forEach((group) => {
                         const checkedValue = Array.from(document.getElementsByName(group.name)).find(r => r.checked);
                         if (group.required && !checkedValue) {
                             group.invalid = true;
+                            validForm = false;
                         }
                     });
+
+                    if (validForm) {
+                        alert("Formulaire soumis");
+                    }
                 }
             </script>
             <qc-code target-id="qc-radio-form-validation-example" language="javascript"></qc-code>
@@ -1624,6 +1631,26 @@
                         <td>"true" ou "false"</td>
                         <td>"false"</td>
                         <td>Indique si un bouton radio ne peut pas être sélectionné</td>
+                    </tr>
+                    <tr>
+                        <td>required</td>
+                        <td>"true" ou "false"</td>
+                        <td>"false"</td>
+                        <td>
+                            Indique la valeur <code class="qc-bg-color-grey-pale">aria-required</code> du bouton radio.
+                            Hérité du groupe parent si une valeur y est présente. Permet aux lecteurs d'écran d'indiquer
+                            que le groupe de boutons radio est requis.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>invalid</td>
+                        <td>"true" ou "false"</td>
+                        <td>"false"</td>
+                        <td>
+                            Indique la valeur <code class="qc-bg-color-grey-pale">aria-invalid</code> du bouton radio.
+                            Hérité du groupe parent si une valeur y est présente. Permet aux lecteurs d'écran d'indiquer
+                            que l'état du groupe de boutons radio est invalide.
+                        </td>
                     </tr>
                     <tr>
                         <td>radio-*</td>
