Select-box - commit initial - reprise du code depuis québec.ca

--- a/public/index.html
+++ b/public/index.html
@@ -1406,6 +1406,25 @@
                     </tbody>
                 </table>
             </div>
+            <hr/>
+
+            <!-- haut de page -->
+            <h2 id="select-box">Menu select</h2>
+
+
+            <qc-doc-exemple caption="Exemple de menu de sélection">
+                <form >
+                    <qc-select-box
+                            id="combo-box"
+                            name="test-combo"
+                            items='["Pomme","Banane","Orange","Fraise","Mangue","Ananas","Kiwi","Cerise","Poire","Raisin"]'
+                            value="Banane"
+                            css-path=""
+                    ></qc-select-box>
+                    <button>go</button>
+                </form>
+
+            </qc-doc-exemple>
         </div>
     </main>
     <footer>
