Amelioration de l'affichage des exemples de la doc

--- a/public/index.html
+++ b/public/index.html
@@ -1415,7 +1415,7 @@
             <h3>Exemples</h3>
 
             <qc-doc-exemple caption="Exemple de boutons radio de taille moyenne avec une option désactivée et une option présélectionnée">
-                <qc-radio-group legend="Choisissez une option :" name="ex-md" size="md">
+                <qc-radio-group id="exemple-radio-md" legend="Choisissez une option :" name="ex-md" size="md">
                     <qc-radio-button
                             label="Option 1"
                             value="1"
@@ -1431,17 +1431,16 @@
                             disabled
                     ></qc-radio-button>
                 </qc-radio-group>
+
+                <script>
+                    const group = document.getElementById("exemple-radio-md");
+
+                    group.addEventListener("change", () => {
+                        const checkedValue = group.querySelector("input:checked").value;
+                        console.log(checkedValue);
+                    });
+                </script>
             </qc-doc-exemple>
-
-            <script id="qc-radio-get-value">
-                const group = document.querySelector("qc-radio-group[name='ex-md']");
-
-                group.addEventListener("change", () => {
-                    const checkedValue = group.querySelector("input:checked").value;
-                    console.log(checkedValue);
-                });
-            </script>
-            <qc-code target-id="qc-radio-get-value" language="javascript"></qc-code>
 
             <qc-doc-exemple caption="Exemple de boutons radio de petite taille avec une option désactivée et une option présélectionnée">
                 <qc-radio-group legend="Choisissez une option :" name="ex-sm" size="sm">
@@ -1503,32 +1502,30 @@
                     Soumettre
                 </button>
                 </form>
-            </qc-doc-exemple>
 
-<!--            <h5>Code JS de cet exemple de validation</h5>-->
-            <script id="qc-radio-form-validation-example">
-                const form = document.getElementById("radio-form");
-                form.addEventListener("submit", (event) => validateRadioForm(event, form));
-                function validateRadioForm(event, formToValidate) {
-                    event.preventDefault();
+                <script>
+                    const form = document.getElementById("radio-form");
+                    form.addEventListener("submit", (event) => validateRadioForm(event, form));
+                    function validateRadioForm(event, formToValidate) {
+                        event.preventDefault();
 
-                    const groups = formToValidate.querySelectorAll("qc-radio-group");
-                    let validForm = true;
-                    groups.forEach((group) => {
-                        const checkedValues = Array.from(group.querySelectorAll(`input[name="${group.name}"]`))
-                            .find(r => r.checked);
-                        if (group.required && !checkedValues) {
-                            group.invalid = true;
-                            validForm = false;
+                        const groups = formToValidate.querySelectorAll("qc-radio-group");
+                        let validForm = true;
+                        groups.forEach((group) => {
+                            const checkedValues = Array.from(group.querySelectorAll(`input[name="${group.name}"]`))
+                                .find(r => r.checked);
+                            if (group.required && !checkedValues) {
+                                group.invalid = true;
+                                validForm = false;
+                            }
+                        });
+
+                        if (validForm) {
+                            alert("Formulaire soumis");
                         }
-                    });
-
-                    if (validForm) {
-                        alert("Formulaire soumis");
                     }
-                }
-            </script>
-            <qc-code target-id="qc-radio-form-validation-example" language="javascript"></qc-code>
+                </script>
+            </qc-doc-exemple>
 
             <h4>Documentation technique</h4>
 
