Renommage des attributs pour plus de constance

--- a/public/index.html
+++ b/public/index.html
@@ -1467,7 +1467,7 @@
                             legend="Quel est votre niveau de scolarité?"
                             name="ex-md-form"
                             required
-                            error-text="Veuillez sélectionner un niveau de scolarité."
+                            invalid-text="Veuillez sélectionner un niveau de scolarité."
                     >
                         <qc-radio-button
                                 label="Secondaire"
@@ -1575,10 +1575,10 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>error-text</td>
+                        <td>invalid-text</td>
                         <td>Texte</td>
                         <td>Champ obligatoire/Required field</td>
-                        <td>Texte qui s'affiche sous les boutons radio en cas d'erreur</td>
+                        <td>Texte qui s'affiche sous les boutons radio en cas d'état invalide</td>
                     </tr>
                     </tbody>
                 </table>
